<resources>
    <string name="app_name">CardBoardGame</string>
    <string name="activity_main_text">Which category would you like?</string>
    <string name="board_description">Image of board game</string>
    <string name="card_description">Image of card game</string>
    <string name="card">Card </string>
    <string name="board">Board </string>
    <string name="board_game">Board game</string>
    <string name="card_game">Card game</string>
    <string name="title_activity_game_list">Game List</string>
    <string name="action_settings">Settings</string>
</resources>